Fixed Gradient Overlapping bug

--- a/styles/main.css
+++ b/styles/main.css
@@ -261,11 +261,11 @@ body {
     height: 100%;
     margin: 0;
     background-repeat: no-repeat;
-    background-attachment: fixed;
+    background-attachment: relative;
 
 
     background: linear-gradient(-45deg, var(--dGradient) 0%, var(--lGradient) 100%);
-    background-size: 500% 500%;
+    background-size: 900% 900%;
     animation: gradientInf 90s ease-in-out infinite;
 }
 
